--- a/style.css
+++ b/style.css
@@ -1,7 +1,32 @@
-/* body {
-    width: 100%;
-    height: 100%;
-} */
+body {
+    margin: 0;
+    /* width: 100%;
+    height: 100%; */
+    background-color: aquamarine;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(23, 23, 23);
+}
+  
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#contenedor-fondo{
+    z-index: 2;
+}
 
 .titulo {
     display: inline-block;
@@ -14,4 +39,55 @@
 
 button {
     cursor: pointer;
+}
+
+.stars{
+    background-color: antiquewhite;
+}
+
+.star {
+    --star-color:orange;
+    margin:1em auto;
+    font-size:1em;
+    position: relative;
+    display: block;
+    width: 0px;
+    height: 0px;
+    border-right: 1em solid transparent;
+    border-bottom: 0.7em solid var(--star-color);
+    border-left: 1em solid transparent;
+    transform: rotate(35deg);
+   }
+.star:before {
+    border-bottom: 0.8em solid var(--star-color);
+    border-left: 0.3em solid transparent;
+    border-right: 0.3em solid transparent;
+    position: absolute;
+    height: 0;
+    width: 0;
+    top: -0.45em;
+    left: -0.65em;
+    display: block;
+    content:"";
+    transform: rotate(-35deg);
+}
+.star:after {
+    position: absolute;
+    display: block;
+    top: 0.03em;
+    left: -1.05em;
+    width: 0;
+    height: 0;
+    border-right: 1em solid transparent;
+    border-bottom: 0.7em solid var(--star-color);
+    border-left: 1em solid transparent;
+    transform: rotate(-70deg);
+    content:"";
+}
+
+.parrafo{
+    float: left;
+    position: absolute;
+    align-content: flex-end;
+    align-items: flex-end;
 }
