--- a/style.css
+++ b/style.css
@@ -1,161 +1,164 @@
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+
+* {
+    margin: 0;
+}
+
 html {
-  box-sizing: border-box;
-  height: 100%;
+    box-sizing: border-box;
+    height: 100%;
+    font-family: 'Poiret One';
+    font-weight: bold;
 }
+
 *, *:before, *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
+
 body {
-  min-height: 100%;
+    min-height: 100%;
 }
 
 .navbar{
-  display: inline-block;
-  border: 1px solid black;
-  cursor: pointer;
-  font-size: 4rem;
-  font-family: "Helvetica Ne";
-  display:flex;
-  align-items: flex-end;
-  grid-area: navbar;
-  background-color:rgb(106, 177, 177)
-  transition-property: background-color;
-  transition-duration: .75s
+    display: inline-block;
+    border: 2px solid black;
+    cursor: pointer;
+    padding-left: 1rem;
+    font-size: 4rem;
+    font-family: 'Poiret One';
+    font-weight: bold;
+    display:flex;
+    align-items: flex-end;
+    grid-area: navbar;
+    background-color:rgb(106, 177, 177);
+    transition-property: background-color;
+    transition-duration: .75s;
 }
+
 .properties{
-  grid-area: properties;
-  border: 1px solid black;
-  display: inline-block;
-  cursor: pointer;
-  background-color:rgb(137, 249, 162);
-  transition-property: background-color;
-  transition-duration: .75s
+    grid-area: properties;
+    border: 2px solid black;
+    height: 63%;
+    font-family: 'Poiret One';
+    padding-left: 1rem;
+    padding-top: 1rem;
+    font-size: 19px;
+    font-weight: bold;
+    margin-top: 1rem;
+    display: inline-block;
+    cursor: pointer;
+    background-color:rgb(137, 249, 162);
+    transition-property: background-color;
+    transition-duration: .75s;
 }
+
+p {
+    margin: .45rem;
+}
+
 
 .button{
-  cursor: pointer;
-  grid-area: button;
-  font-size: 30px;
-  background-color:rgb(218, 50, 48);
-  border-radius:50%;
-  transition-property: background-color;
-  transition-duration: .75s
+    cursor: pointer;
+    grid-area: button;
+    font-family: 'Poiret One';
+    font-size: 20px;
+    font-weight: bold;
+    font-size: 30px;
+    background-color:rgb(218, 50, 48);
+    border-radius:50%;
+    transition-property: background-color;
+    transition-duration: .75s;
+    height: 200px;
+    width: 200px;
 }
 
-  /* height:10rem;
-  width:10rem; */
-  /* background-color:rgb(176, 236, 236); */
-  .stars {
+.stars {
+    width: 300px;
+    height: 300px;
+    border: 2px solid black;
+    background: red;
+    transform: rotate(45deg);
     grid-area: stars;
-      background: red;
-      width: 8rem;
-      height: 8rem;
-      position: relative;
-      text-align: center;
-    }
-    .stars:before,
-    .stars:after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 8rem;
-      width: 8rem;
-      background: red;
-    }
-    .stars:before {
-      transform: rotate(30deg);
-    }
-    .stars:after {
-      transform: rotate(60deg);
-    }
+    transition-property: background-color;
+    transition-duration: .75s
+}
 
-
-  /* background-color:rgb(215, 236, 176); */
-  .stars1{
-
+.stars1{
     width: 8rem;
-  height: 8rem;
-  background: red;
-  border: 1px solid black;
-  border-radius: 50%;
-  transition-property: background-color;
-  transition-duration: .75s
-   }
-
+    height: 8rem;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    background: rgb(0, 255, 179);
+    border: 2px solid black;
+    border-radius: 50%;
+    transition-property: background-color;
+    transition-duration: .75s
+}
 
 .stars2 {
-   grid-area: stars2;
-   background: red;
-   width: 8rem;
-   height: 8rem;
-   position: relative;
-   text-align: center;
-   transform: rotate(20deg);
- }
-.stars2:before {
-   content: "";
-   position: absolute;
-   top: 0;
-   left: 0;
-   height: 8rem;
-   width: 8rem;
-   background: red;
-   transform: rotate(135deg);
-     }
+    grid-area: stars2;
+    background: red;
+    border: 2px solid black;
+    width: 100px;
+    height: 200px;
+    transform: rotate(45deg);
+    transition-property: background-color;
+    transition-duration: .75s
+}
 
+.stars3 {
+    grid-area: stars3;
+    cursor: pointer;
+    border: 2px solid black;
+    margin-top: 1rem;
+    display: block;
+    width: 126px;
+    height: 180px;
+    background-color: red;
+    border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+    transition-property: background-color;
+    transition-duration: .75s
+}
 
-.stars3{
-  grid-area: stars3;
-  cursor: pointer;
-  border: 1px solid black;
-   display: block;
-   width: 126px;
-   height: 180px;
-   background-color: red;
-   border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
-   transition-property: background-color;
-   transition-duration: .75s
-
+.stars4 {
+    cursor: pointer;
+    border: 2px solid black;
+    grid-area: stars4;
+    width: 200px;
+    height: 100px;
+    background: red;
+    border-radius: 100px / 50px;
+    transition-property: background-color;
+    transition-duration: .75s
 }
 
 
-.stars4{
-  cursor: pointer;
-  border: 1px solid black;
-  grid-area: stars4;
-  width: 200px;
-  height: 100px;
-  background: red;
-  border-radius: 100px / 50px;
-  transition-property: background-color;
-  transition-duration: .75s
-}
-
-
-.footer{
-  grid-area: footer;
+.footer {
+    grid-area: footer;
+    font-family: 'Poiret One';
+    font-weight: bold;
+    padding: .5rem;
     cursor: pointer;
     border: 2px solid black;
     display: flex;
     font-size: 3rem;
     align-items: center;
-     background-color: rgb(236, 191, 176);
+    background-color: rgb(236, 191, 176);
     transition-property: background-color;
     transition-duration: .75s;
+    z-index: 1;
 }
 
 #contenedor-fondo {
     display: grid;
-    gap: 5px ;
-    border: 5px solid black;
-    grid-template-rows: 9rem 10rem  10rem 150px 10rem;
-    grid-template-columns:12rem 10rem 10rem 150px 10rem 10rem 10rem;
+    /* gap: 5px ; */
+    /* border: 5px solid black; */
+    grid-template-rows: 10% 22.5% 22.5% 22.5% 22.5%;
+    grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
     grid-template-areas:
-    "navbar navbar navbar  navbar  navbar  navbar   navbar       navbar"
-    " .      .     stars3     .     .        .    properties    properties"
-    " .  stars   .     .   button     .       .              ."
-    " .      .       .      stars1  .        .      stars2          ."
-    " footer footer footer    .     .        .       .           stars4"
-
-  }
+        "navbar navbar navbar  navbar  navbar  navbar   navbar navbar"
+        " .      .     .     stars3     .        .    properties    properties"
+        " .      .   .     .   button     .       .              ."
+        " .      stars       .      stars1  .        .      .          stars2"
+        " footer footer footer    .     .        stars4       .           ."
+}
