--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 
-* {
-    margin: 0;
-}
-
 html {
     box-sizing: border-box;
     height: 100%;
@@ -13,6 +9,7 @@ html {
 
 *, *:before, *:after {
     box-sizing: inherit;
+    margin: 0;
 }
 
 body {
@@ -56,7 +53,6 @@ p {
     margin: .45rem;
 }
 
-
 .button{
     cursor: pointer;
     grid-area: button;
@@ -72,18 +68,18 @@ p {
     width: 200px;
 }
 
-.stars {
+.figure {
     width: 300px;
     height: 300px;
     border: 2px solid black;
     background: red;
     transform: rotate(45deg);
-    grid-area: stars;
+    grid-area: figure;
     transition-property: background-color;
     transition-duration: .75s
 }
 
-.stars1{
+.figure1{
     width: 8rem;
     height: 8rem;
     margin-top: 1rem;
@@ -95,8 +91,8 @@ p {
     transition-duration: .75s
 }
 
-.stars2 {
-    grid-area: stars2;
+.figure2 {
+    grid-area: figure2;
     background: red;
     border: 2px solid black;
     width: 100px;
@@ -106,8 +102,8 @@ p {
     transition-duration: .75s
 }
 
-.stars3 {
-    grid-area: stars3;
+.figure3 {
+    grid-area: figure3;
     cursor: pointer;
     border: 2px solid black;
     margin-top: 1rem;
@@ -120,10 +116,10 @@ p {
     transition-duration: .75s
 }
 
-.stars4 {
+.figure4 {
     cursor: pointer;
     border: 2px solid black;
-    grid-area: stars4;
+    grid-area: figure4;
     width: 200px;
     height: 100px;
     background: red;
@@ -131,7 +127,6 @@ p {
     transition-property: background-color;
     transition-duration: .75s
 }
-
 
 .footer {
     grid-area: footer;
@@ -157,8 +152,8 @@ p {
     grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
     grid-template-areas:
         "navbar navbar navbar  navbar  navbar  navbar   navbar navbar"
-        " .      .     .     stars3     .        .    properties    properties"
+        " .      .     .     figure3     .        .    properties    properties"
         " .      .   .     .   button     .       .              ."
-        " .      stars       .      stars1  .        .      .          stars2"
-        " footer footer footer    .     .        stars4       .           ."
+        " .      figure       .      figure1  .        .      .          figure2"
+        " footer footer footer    .     .        figure4       .           ."
 }
