--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ p {
     z-index: 1;
 }
 
-#contenedor-fondo {
+#container-font {
     display: grid;
     /* gap: 5px ; */
     /* border: 5px solid black; */
