--- a/style.css
+++ b/style.css
@@ -19,10 +19,12 @@ body {
 .navbar{
     grid-area: navbar;
     display: inline-block;
-    border: 2px solid black;
+    border: .13vw solid black;
+    height:10vh;
+    width: 200%;
     cursor: pointer;
-    padding-left: 1rem;
-    font-size: 4rem;
+    padding-left: 1%;
+    font-size: min(60px, 13vw);
     font-family: 'Poiret One';
     font-weight: bold;
     display:flex;
@@ -32,63 +34,68 @@ body {
     transition-duration: .75s;
 }
 
-.properties{
+.properties {
     grid-area: properties;
-    border: 2px solid black;
-    height: 63%;
+    border: .1vw solid black;
+    /* height: 215px; */
+    width: 94%;
     font-family: 'Poiret One';
-    padding-left: 1rem;
-    padding-top: 1rem;
-    font-size: 1.1875em;
+    /* padding-left: 9%; */
+    padding-top: 4%;
+    padding-right: 15%;
+    font-size: clamp(13px, 1.1vw, 40px);
     font-weight: bold;
-    margin-top: 1rem;
-    display: inline-block;
+    margin-top: 3%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     cursor: pointer;
-    background-color:rgb(137, 249, 162);
+    background-color: rgb(137, 249, 162);
     transition-property: background-color;
     transition-duration: .75s;
 }
 
+
 p {
-    margin: .45rem;
+    margin: 1.9%;
 }
 
 .button{
     grid-area: button;
     cursor: pointer;
+     border: .11vw solid black; 
     font-family: 'Poiret One';
-    font-size: 20px;
     font-weight: bold;
-    font-size: 1.875em;
+    font-size: 1.575vw;
     background-color:rgb(218, 50, 48);
     border-radius:50%;
     transition-property: background-color;
     transition-duration: .75s;
-    height: 200px;
-    width: 200px;
+    height: 10vw;
+    width: 10vw;
 }
 
 .figure {
     grid-area: figure;
     cursor: pointer;
-    width: 300px;
-    height: 300px;
-    border: 2px solid black;
+    width: 108%;
+    height: 130%;
+    border: .1vw solid black;
     background: red;
     transform: rotate(45deg);
     transition-property: background-color;
-    transition-duration: .75s
+    transition-duration: .75s;
 }
 
 .figure1{
     grid-area: figure1;
     cursor: pointer;
-    width: 8rem;
-    height: 8rem;
-    margin-top: 1rem;
-    margin-left: 1rem;
+    width: 8vw;
+    height: 8vw;
+    margin-top: 5%;
+    margin-left: 7%;
     background: rgb(0, 255, 179);
-    border: 2px solid black;
+    border: .1vw solid black;
     border-radius: 50%;
     transition-property: background-color;
     transition-duration: .75s
@@ -98,9 +105,9 @@ p {
     grid-area: figure2;
     cursor: pointer;
     background: red;
-    border: 2px solid black;
-    width: 100px;
-    height: 200px;
+    border: .1vw solid black;
+    width: 90%;
+    height: 180%;
     transform: rotate(45deg);
     transition-property: background-color;
     transition-duration: .75s
@@ -109,11 +116,11 @@ p {
 .figure3 {
     grid-area: figure3;
     cursor: pointer;
-    border: 2px solid black;
-    margin-top: 1rem;
+    border: .1vw solid black;
+    margin-top: 1vw;
     display: block;
-    width: 126px;
-    height: 180px;
+    width: 7vw;
+    height: 10vw;
     background-color: red;
     border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
     transition-property: background-color;
@@ -123,11 +130,11 @@ p {
 .figure4 {
     grid-area: figure4;
     cursor: pointer;
-    border: 2px solid black;
-    width: 200px;
-    height: 100px;
+    border: .1vw solid black;
+    width: 14.1vw;
+    height: 7.9vw;
     background: red;
-    border-radius: 100px / 50px;
+    border-radius: 100% / 100%;
     transition-property: background-color;
     transition-duration: .75s
 }
@@ -136,11 +143,11 @@ p {
     grid-area: footer;
     font-family: 'Poiret One';
     font-weight: bold;
-    padding: .5rem;
+    padding: 3%;
     cursor: pointer;
-    border: 2px solid black;
+    border: .14vw solid black;
     display: flex;
-    font-size: 3rem;
+    font-size: min(45px, 4vw);
     align-items: center;
     background-color: rgb(236, 191, 176);
     transition-property: background-color;
